--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 
 show_downloads: "true"
-show_clipboard: "true"
+# show_clipboard: "true"
 
 google_analytics: UA-186284773-1
